Минорные изменения в сваггере и контроллерах - В контроллерах использование имплементаций изменено на сервисы - В сваггер возвращены два гет-запроса для валют - В сваггере put-запросы перемещены на нужный адрес, теперь они не требуют id - Delete-операции теперь работают через id, перемещены в сваггере, изменены контроллеры
