# src/main/java/com/example/turing_beta/rest/AccountController.java
@@ -1,7 +1,7 @@
 package com.example.turing_beta.rest;
 
 import com.example.turing_beta.entity.Account;
-import com.example.turing_beta.service.impl.AccountServiceImpl;
+import com.example.turing_beta.service.AccountService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -13,7 +13,7 @@ import java.util.List;
 @RequiredArgsConstructor
 @RequestMapping("/api/v1/account")
 public class AccountController {
-    private final AccountServiceImpl accountService;
+    private final AccountService accountService;
 
     @GetMapping
     public ResponseEntity<List<Account>> getAllAccounts(){
@@ -30,14 +30,15 @@ public class AccountController {
         return ResponseEntity.ok(accountService.getById(id));
     }
 
-    @PatchMapping // todo Переместить метод в сваггере на нужный адрес, поменять название и реквест
+    @PatchMapping
     public ResponseEntity<Account> updateAccount(@RequestBody Account account){
         return ResponseEntity.ok(accountService.save(account));
     }
 
-    @DeleteMapping// todo Переместить метод в сваггере на нужный адрес, поменять название и реквест
-    public ResponseEntity<Account> deleteAccount(@RequestBody Account account){
-        return ResponseEntity.ok(accountService.delete(account));
+    @DeleteMapping("/{id}")
+    public ResponseEntity<?> deleteAccount(@PathVariable Long id){
+        accountService.deleteById(id);
+        return ResponseEntity.ok().build();
     }
 
     @GetMapping("/name/{name}")
